[package]
name = "simengine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["net", "time", "sync", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
instant = "0.1"
clap = { version = "4", features = ["derive"] }

[features]
default = []
